@@ -1,0 +1,3 @@
+agregar_adsense_a_doc.rb
+pkg
+doc
