@@ -10,7 +10,7 @@ d=sample.times.collect {rand}.to_scale
 
 ds={'a'=>a,'b'=>b,'c'=>c,'d'=>d}.to_dataset
 ds['y']=ds.collect{|row| row['a']*5+row['b']*3+row['c']*2+row['d']+rand()}
-rb=ReportBuilder.new("Dominance Analysis")
+rb=ReportBuilder.new(:name=>"Dominance Analysis")
 
 cm=Statsample::Bivariate.correlation_matrix(ds)
 rb.add(cm)
